fix for the nav overlapping sidebar

--- a/src/components/subscriptions/styles/SubscriptionManagementPage.scss
+++ b/src/components/subscriptions/styles/SubscriptionManagementPage.scss
@@ -3,7 +3,7 @@
 .manage-subscription {
   .add-users-dropdown {
     .dropdown-menu {
-      z-index: 1040;
+      z-index: $zindex-fixed;
     }
   }
 
